Fix 1px border (g-menu) problem (disappearing in different zoom options). Fix problem with error handling in edit action. All actions in panels now work. After all actions last visited page (pagination) and game info visibility is restored.

--- a/app/assets/stylesheets/panels_view.scss
+++ b/app/assets/stylesheets/panels_view.scss
@@ -194,7 +194,7 @@
     top: 0;
     height: 100%;
     width: 5px;
-    border-right: 1px solid $light_grey;
+    border-right: thin solid $light_grey;
 }
 
 .g-menu ul {
